2015-04-02 Albert Chu <chu11@llnl.gov>

	* man/ipmiconsole.8.pre.in: Remove duplicate information.  (bug
	#44698)
	
2015-01-07  Albert Chu <chu11@llnl.gov>

	* NEWS, configure.ac: Update for release.

	* Tagged Release-1_4_8

	* configure.ac: Increment libfreeipmi version appropriately.

2015-01-06 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/libcommon/ipmi-crypt.c (crypt_init): Only call
	gcry_control w/ GCRYCTL_SET_THREAD_CBS once.  It appears newer
	version of libgcrypt cannot handle entering this function
	simulatenously by multiple threads, leading to segfaults.

2015-01-06 Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-cmdline-common.c: Fix parsing corner case
	with --fanout option.

2014-12-10  Albert Chu <chu11@llnl.gov>

	* NEWS, configure.ac: Update for release.

	* Tagged Release-1_4_7

2014-12-10 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-user-sections.c (_set_user_access):
	Workaround issue on Supermicro X10DDW-i.

2014-12-09 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-lan-conf-section.c: Fix
	vlan_id from uint8_t to uint16_t.

	Found by jbd at jbdenis dot net
	
2014-11-14 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/driver/ipmi-sunbmc-driver.c,
	libfreeipmi/driver/ipmi-ssif-driver.c,
	libfreeipmi/driver/ipmi-openipmi-driver.c: Loop on select() call
	if interrupted by EINTR.  Issue found by Robin Geyer (robin dot geyer at tu-dresden dot de)
	
2014-11-14 Albert Chu <chu11@llnl.gov>

	* bmc-info/bmc-info.c (display_system_info_common): Fix cut &
	paste error handling bug.

2014-11-07 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/spec/ipmi-sensor-and-event-code-tables-spec.c: Fix
	typo. (Found by Werner Fischer).
	
2014-11-03 Albert Chu <chu11@llnl.gov>

	* configure.ac: Increment libfreeipmi version appropriately.

2014-11-03 Albert Chu <chu11@llnl.gov>

	* Found by Satya Nishtala <satya at drivescale dot com>

	Fix typo throughout with "Tegulu" language, which should be