@@ -1,3 +1,12 @@
+2015-06-01 Albert Chu <chu11@llnl.gov>
+
+	* Audit and fix all strtol parse corner cases.
+
+2015-06-01 James Buren <ryu0@ymail.com>
+
+	* ipmi-config/ipmi-config-argp.c (_ipmi_config_parse_channel_number):
+	Fix strtol parse corner case.
+	
 2015-04-02 Albert Chu <chu11@llnl.gov>
 
 	* man/ipmiconsole.8.pre.in: Remove duplicate information.  (bug
